fix: message box hiding on mobile view

--- a/app/theme/client/imports/general/react-root.css
+++ b/app/theme/client/imports/general/react-root.css
@@ -6,6 +6,6 @@
 	flex-direction: column;
 
 	width: 100vw;
-	height: 100vh;
+	height: 100%;
 	padding: 0;
 }
